refactored path for route code files

--- a/zuplo.jsonc
+++ b/zuplo.jsonc
@@ -1,4 +1,8 @@
 {
+  "$schema": "https://zuplo.com/schemas/config.json",
+  "name": "zoopx-api",
+  "project": "apricot_sparkling_barnacle",
+  "compatibilityDate": "2025-02-06",
   "version": 1,
-  "compatibilityDate": "2025-02-06"
+  "routes": "../routes"
 }
